# fulltext-search-rust

./: .gitignore  Cargo.toml  README.md  build.rs  todo.txt
.devcontainer/: Dockerfile
src/: kv.rs  main.rs
src/db/: helper.rs  mod.rs  rocks.rs  sqlite.rs
