[package]
name = "rust-fulltext"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.17.0"
serde_derive = "1.0.127"
bincode = "1.3.3"
serde = "1.0.127"
actix-web = "3.3.2"
actix-rt = "2.2.0"
rusqlite = "0.25.3"
r2d2 = "0.8.2"
r2d2_sqlite = "0.18.0"
derive_more = "0.99.16"
phf_codegen = "0.10"
phf = "0.10"

[build-dependencies]
phf_codegen = "0.10"
phf = "0.10"